# ai-resume-screening

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  project_plan.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  structured_logging.py
backend/app/api/: routes.py  schemas.py
backend/app/models/: __init__.py  candidate_profile.py  match.py  requirements.py  resume_screening.py
backend/app/prompts/: jd_extract.md  jd_extract.txt  resume_extract.txt  screen_resume.md  screening.txt
backend/app/schemas/: field_descriptions.py
backend/app/services/: cv_text.py  document_parser.py  jd_extract.py  jd_hints.py  llm_client.py  llm_normalize.py  llm_schema.py  llm_screening.py  mock_llm.py  ollama_client.py  prompt_loader.py  ranking.py  resume_extract.py  screening_pipeline.py
backend/tests/: conftest.py  test_cv_text.py  test_e2e.py  test_jd_hints.py  test_llm_json_parse.py  test_llm_normalize.py  test_llm_schema.py  test_models.py  test_structured_logging.py
backend/tests/fixtures/: sample_cv.txt  sample_jd.txt
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CandidateRow.tsx  RequirementsBanner.tsx  ResultsTable.tsx  UploadForm.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
